RIA-TASK - Merged Master changes to NABA home-office (#328)
* RIA-7251 Break app startup if missing HO secrets (#312)

Co-authored-by: Javier Marin <fjavimarc@gmail.com>

* RIA-7385 Remove pedantic checkstyle rules (#318)

* RIA-7384 Enforce conventions on commit messages and branches (#319)

* RIA-7135 - Java 17 Upgrade (#317)

* RIA-7315 Fix terraform

* RIA-7251 Restructuring build.gradle file (#313)

* RIA-7251 Restructuring gradle file for readability

* RIA-7251 Restructuring gradle file for readability

* RIA-7251 Even more suppressions

* RIA-7251 Even more suppressions

* RIA-7251 Empty commit to assess pipeline build status (#324)

* RIA-6817 - add fortify scan on nightly build (#327)

---------

Co-authored-by: filippo-possenti-version1 <109352283+filippo-possenti-version1@users.noreply.github.com>
Co-authored-by: Javier Marin <fjavimarc@gmail.com>
Co-authored-by: burnstHMCTS <134689347+burnstHMCTS@users.noreply.github.com>
Co-authored-by: Filippo Possenti <filippo.possenti@version1.com>