@@ -3,7 +3,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath("org.yaml:snakeyaml:1.23")
+    classpath("org.yaml:snakeyaml:2.1")
     classpath("net.serenity-bdd:serenity-gradle-plugin:3.2.3")
   }
 }
@@ -13,14 +13,15 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.3.9.RELEASE'
+  id 'io.spring.dependency-management' version '1.1.0'
+  id 'org.springframework.boot' version '2.7.14'
   id 'uk.gov.hmcts.java' version '0.12.43'
-  id 'org.owasp.dependencycheck' version '8.0.2'
+  id 'org.owasp.dependencycheck' version '8.2.1'
   id 'com.github.ben-manes.versions' version '0.28.0'
   id 'org.sonarqube' version '2.8'
   id 'au.com.dius.pact' version '4.1.38'
-  id "info.solidsoft.pitest" version '1.5.2'
+  id 'info.solidsoft.pitest' version '1.5.2'
+  id 'io.freefair.lombok' version '6.2.0'
 }
 
 apply plugin: 'java'
@@ -126,6 +127,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
   classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
   maxWarnings = 0
   toolVersion = '10.12.0'
@@ -211,34 +218,30 @@ dependencyCheck {
 
 dependencyManagement {
   dependencies {
-    // CVE-2018-10237 - Unbounded memory allocation
-    dependencySet(group: 'com.google.guava', version: '30.0-jre') {
-      entry 'guava'
+
+    dependency group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
+    dependency group: 'com.google.guava', name: 'guava', version: '32.1.2-jre'
+    dependency group: 'org.yaml', name: 'snakeyaml', version: '2.1'
+
+    dependencySet(group: 'com.fasterxml.jackson.core', version: '2.15.0') {
+      entry 'jackson-databind'
+      entry 'jackson-core'
+      entry 'jackson-annotations'
     }
 
-    // CVE-2021-42340
-    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.58') {
-          entry 'tomcat-embed-core'
-          entry 'tomcat-embed-el'
-          entry 'tomcat-embed-websocket'
+    dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.15.0') {
+      entry 'jackson-dataformat-yaml'
+      entry 'jackson-dataformat-cbor'
     }
 
-    // CVE-2021-22060
-    dependency(group: 'org.springframework', name: 'spring-core', version: '5.3.15')
-
-    //CVE-2021-22119
-    dependency group: 'org.springframework.security', name: 'spring-security-core',  version: '5.6.1'
-
-    //CVE-2021-42550
-    dependencySet(group: 'ch.qos.logback', version: '1.2.10') {
-      entry 'logback-classic'
-      entry 'logback-core'
+    dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.15.0') {
+      entry 'jackson-datatype-jsr310'
+      entry 'jackson-datatype-jdk8'
     }
 
-    //CVE-2021-44228, CVE-2021-44832, CVE-2021-45046
-    dependencySet(group: 'org.apache.logging.log4j', version: '2.17.1') {
-      entry 'log4j-api'
-      entry 'log4j-to-slf4j'
+    dependencySet(group: 'com.fasterxml.jackson.module', version: '2.15.0') {
+      entry 'jackson-module-parameter-names'
+      entry 'jackson-module-afterburner'
     }
   }
 }
@@ -252,23 +255,13 @@ repositories {
   }
 }
 
-def versions = [
-  junit           : '5.6.2',
-  junitPlatform   : '1.6.2',
-  reformLogging   : '5.1.7',
-  springBoot      : '2.6.3',
-  springfoxSwagger: '2.9.2',
-  pact_version    : '3.5.24',
-  serenity        : '3.2.3'
-]
-
 ext.libraries = [
   junit5: [
-    "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
-    "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
-    "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
-    "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
-    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
+    "org.junit.jupiter:junit-jupiter-api:5.6.2",
+    "org.junit.jupiter:junit-jupiter-engine:5.6.2",
+    "org.junit.jupiter:junit-jupiter-params:5.6.2",
+    "org.junit.platform:junit-platform-commons:1.6.2",
+    "org.junit.platform:junit-platform-engine:1.6.2"
   ]
 ]
 
@@ -282,40 +275,34 @@ configurations {
 }
 
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server', version: versions.springBoot
-
-  // CVE-2019-17195
-  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
-
-  // CVE-2021-27568
-  implementation group: 'net.minidev', name: 'json-smart', version: '2.3.1'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.1'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: 'Hoxton.SR4'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap' , version: '3.1.1'
 
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.2'
-  implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
-  implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
-
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.2.RELEASE'
+  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: '5.1.7'
+  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: '5.1.7'
   implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
-
-  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
-
-  compileOnly 'org.projectlombok:lombok:1.18.28'
-  annotationProcessor 'org.projectlombok:lombok:1.18.28'
   implementation group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.4'
 
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: 'Hoxton.SR4'
-  implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.3'
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
 
+  // CVE-2019-17195
+  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.22'
+
+  // CVE-2021-27568
+  implementation group: 'net.minidev', name: 'json-smart', version: '2.4.10'
+
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
   implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
   implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
 
@@ -324,55 +311,54 @@ dependencies {
   implementation group: 'org.codehaus.groovy', name: 'groovy-xml', version: '3.0.17'
 
   implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.12.23'
+  implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.3'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.2.1'
+
+  compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+  testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+  testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+
+  testImplementation libraries.junit5
+  testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.3') {
+    exclude group: 'junit', module: 'junit'
+    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+  }
+
+  testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.19.0'
+  testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.5.0'
+  testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.7'
+  testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
+    exclude group: "com.vaadin.external.google", module: "android-json"
+  }
+  testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.6') {
+    exclude group: "com.github.tomakehurst", module: "wiremock-standalone"
+  }
+  testImplementation group: 'org.springframework.security', name: 'spring-security-test'
+
+  testImplementation group: 'org.pitest', name: 'pitest', version: '1.5.2'
   testImplementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.12.23'
+  testImplementation group: 'com.vladsch.flexmark', name: 'flexmark-all', version: '0.64.8'
 
   testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.1'
   testImplementation group: 'io.rest-assured', name: 'json-path', version: '4.3.1'
   testImplementation group: 'io.rest-assured', name: 'xml-path', version: '4.3.1'
 
-  testImplementation group: 'com.vladsch.flexmark', name: 'flexmark-all', version: '0.64.8'
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: '3.2.3'
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '3.2.3'
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '3.2.3'
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: '3.2.3'
 
-  testImplementation libraries.junit5
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot, {
-    exclude group: 'junit', module: 'junit'
-    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-  }
-
-  testImplementation "com.github.tomakehurst:wiremock:2.19.0"
-  testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.5.0'
-  testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.7'
-  testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot) {
-    exclude group: "com.vaadin.external.google", module: "android-json"
-  }
-  testImplementation "ru.lanwen.wiremock:wiremock-junit5:1.3.1"
-
-
-  testImplementation group: 'org.springframework.security', name: 'spring-security-test'
-  testImplementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
-
-  testCompileOnly 'org.projectlombok:lombok:1.18.28'
-  testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
-
-  testImplementation group: 'org.pitest', name: 'pitest', version: '1.5.2'
-
-  testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
-  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
-  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
-  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
-
-  testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.26.3'
-  testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.26.3'
-  testImplementation group: 'ru.lanwen.wiremock', name: 'wiremock-junit5', version: '1.3.1'
-  testImplementation group: 'org.springframework.security', name: 'spring-security-test'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
 
   //PACT testing
-  contractTestImplementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'
-  contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
-  contractTestImplementation("org.assertj:assertj-core:3.16.1")
+  contractTestImplementation group: 'com.google.guava', name: 'guava', version: '32.1.2-jre'
+  contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+  contractTestImplementation group: 'org.assertj', name: 'assertj-core', version: '3.16.1'
   //pact contract testing
-  contractTestImplementation group: 'au.com.dius', name: 'pact-jvm-consumer-junit5_2.12', version: versions.pact_version
-  contractTestImplementation group: 'au.com.dius', name: 'pact-jvm-consumer-java8_2.12', version: versions.pact_version
-  contractTestImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
+  contractTestImplementation group: 'au.com.dius', name: 'pact-jvm-consumer-junit5_2.12', version: '3.5.24'
+  contractTestImplementation group: 'au.com.dius', name: 'pact-jvm-consumer-java8_2.12', version: '3.5.24'
+  contractTestImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '3.2.3'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
